--- a/sass/_zurb_settings.scss
+++ b/sass/_zurb_settings.scss
@@ -4,10 +4,10 @@
 
 // Grid Settings
 
-// $rowWidth: 1000px;
-// $columnGutter: 30px;
-// $totalColumns: 12;
-// $mobileTotalColumns: 4;
+$rowWidth: 960px;
+$columnGutter: 40px;
+$totalColumns: 12;
+$mobileTotalColumns: 4;
 
 // Colors Settings
 
@@ -15,7 +15,7 @@
 // $secondaryColor: #e9e9e9;
 // $alertColor: #c60f13;
 // $successColor: #5da423;
-// $txtColor: #222;
+$txtColor: $text-color;
 // $highlightColor: #ffff99;
 // $black: #000;
 // $white: #fff;
