--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,40 +1,14 @@
-// You custom settings file to override Foundation defaults
-@import "settings";
+// Globally-useful helpers
+@import "globals/variables";
 
-// Comment out this import if you are customizing you imports below
+// Library Functions
+@import "compass/utilities";
+
+// Custom settings to override Foundation defaults
+@import "zurb_settings";
+
+// Framework
 @import "foundation";
-
-// ----------------------------------------
-// Import specific parts of Foundation by commenting the import "foundation"
-// and uncommenting what you want below. You must uncomment the following if customizing
-
-// @import "compass/css3";
-// @import "foundations/settings";
-// @import "foundations/function/all";
-// @import "foundations/common/globals";
-// @import "foundations/mixins/clearfix";
-
-// Control which mixins you have access too
-
-// @import "foundation/mixins/css-triangle";
-// @import "foundation/mixins/font-size";
-
-// Must include next three for semantic grid to work
-
-// @import "foundation/mixins/respond-to";
-
-// @import "foundation/mixins/semantic-grid";
-
-// Must include the grid for any responsiveness
-
-// @import "foundation/components/grid";
-
-// Control which common styles get compiled
-
-// @import "foundation/common/typography";
-// @import "foundation/common/forms";
-
-// Control which components you get if customizing
 
 // @import "foundation/components/modules/buttons";
 // @import "foundation/components/modules/tabs";
