--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -908,7 +908,7 @@ form.custom .custom.disabled {
 /* The Grid ---------------------- */
 /* line 3, ../vendor/bundler/gems/zurb-foundation-3.0.7/stylesheets/foundation/components/_grid.scss */
 .row {
-  width: 1000px;
+  width: 960px;
   max-width: 100%;
   min-width: 768px;
   margin: 0 auto;
@@ -918,7 +918,7 @@ form.custom .custom.disabled {
   width: auto;
   max-width: none;
   min-width: 0;
-  margin: 0 -15px;
+  margin: 0 -20px;
 }
 /* line 7, ../vendor/bundler/gems/zurb-foundation-3.0.7/stylesheets/foundation/components/_grid.scss */
 .row.collapse .column, .row.collapse .columns {
@@ -929,7 +929,7 @@ form.custom .custom.disabled {
   width: auto;
   max-width: none;
   min-width: 0;
-  margin: 0 -15px;
+  margin: 0 -20px;
 }
 /* line 10, ../vendor/bundler/gems/zurb-foundation-3.0.7/stylesheets/foundation/components/_grid.scss */
 .row .row.collapse {
@@ -940,7 +940,7 @@ form.custom .custom.disabled {
 .column, .columns {
   float: left;
   min-height: 1px;
-  padding: 0 15px;
+  padding: 0 20px;
   position: relative;
 }
 /* line 15, ../vendor/bundler/gems/zurb-foundation-3.0.7/stylesheets/foundation/components/_grid.scss */
@@ -1259,7 +1259,7 @@ img {
   .row .mobile-one {
     width: 25% !important;
     float: left;
-    padding: 0 15px;
+    padding: 0 20px;
   }
   /* line 77, ../vendor/bundler/gems/zurb-foundation-3.0.7/stylesheets/foundation/components/_grid.scss */
   .row .mobile-one:last-child {
@@ -1274,7 +1274,7 @@ img {
   .row .mobile-two {
     width: 50% !important;
     float: left;
-    padding: 0 15px;
+    padding: 0 20px;
   }
   /* line 77, ../vendor/bundler/gems/zurb-foundation-3.0.7/stylesheets/foundation/components/_grid.scss */
   .row .mobile-two:last-child {
@@ -1289,7 +1289,7 @@ img {
   .row .mobile-three {
     width: 75% !important;
     float: left;
-    padding: 0 15px;
+    padding: 0 20px;
   }
   /* line 77, ../vendor/bundler/gems/zurb-foundation-3.0.7/stylesheets/foundation/components/_grid.scss */
   .row .mobile-three:last-child {
@@ -1304,7 +1304,7 @@ img {
   .row .mobile-four {
     width: 100% !important;
     float: left;
-    padding: 0 15px;
+    padding: 0 20px;
   }
   /* line 77, ../vendor/bundler/gems/zurb-foundation-3.0.7/stylesheets/foundation/components/_grid.scss */
   .row .mobile-four:last-child {
@@ -3138,7 +3138,7 @@ dl.tabs dd {
 }
 /* line 15, ../vendor/bundler/gems/zurb-foundation-3.0.7/stylesheets/foundation/components/modules/_tabs.scss */
 dl.tabs dd a {
-  color: #6f6f6f;
+  color: #867c7a;
   display: block;
   font-size: 14px;
   height: 40px;
@@ -3153,7 +3153,7 @@ dl.tabs dd.active {
 /* line 17, ../vendor/bundler/gems/zurb-foundation-3.0.7/stylesheets/foundation/components/modules/_tabs.scss */
 dl.tabs dd.active a {
   cursor: default;
-  color: #3c3c3c;
+  color: #514b49;
   background: #fff;
   border-left: 1px solid #e6e6e6;
   border-right: 1px solid #e6e6e6;
@@ -4299,4 +4299,119 @@ p.vevent abbr {
   font-weight: bold;
   border: none;
   padding: 0 1px;
+}
+
+/* line 2, ../sass/shared/_header.scss */
+header.site {
+  *zoom: 1;
+  min-height: 250px;
+  padding-top: 20px;
+  background-size: auto 270px;
+  background: black url('/images/header/photo_bg10.jpg?1344047301') fixed top center no-repeat;
+}
+/* line 4, ../vendor/bundler/gems/zurb-foundation-3.0.7/stylesheets/foundation/mixins/_clearfix.scss */
+header.site:before, header.site:after {
+  content: "";
+  display: table;
+}
+/* line 5, ../vendor/bundler/gems/zurb-foundation-3.0.7/stylesheets/foundation/mixins/_clearfix.scss */
+header.site:after {
+  clear: both;
+}
+/* line 9, ../sass/shared/_header.scss */
+header.site a {
+  display: block;
+  color: white;
+}
+/* line 14, ../sass/shared/_header.scss */
+header.site h1 {
+  text-indent: -119988px;
+  overflow: hidden;
+  text-align: left;
+  background-image: url('/images/header/logo.png?1344005016');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  width: 365px;
+  height: 60px;
+}
+/* line 15, ../sass/shared/_header.scss */
+header.site h2 {
+  line-height: 0.7;
+  font-size: 37px;
+}
+@media only screen and (max-width: 500px) {
+  /* line 15, ../sass/shared/_header.scss */
+  header.site h2 {
+    font-size: 17px;
+  }
+}
+/* line 20, ../sass/shared/_header.scss */
+header.site h3 {
+  font-size: 23px;
+  line-height: 0.7;
+}
+
+/* line 23, ../sass/shared/_header.scss */
+navigation.site {
+  *zoom: 1;
+  display: block;
+  margin-bottom: 25px;
+  background: #e1284a url('/images/header/grunge_texture_overlay_light_small.png?1344007762') fixed;
+}
+/* line 4, ../vendor/bundler/gems/zurb-foundation-3.0.7/stylesheets/foundation/mixins/_clearfix.scss */
+navigation.site:before, navigation.site:after {
+  content: "";
+  display: table;
+}
+/* line 5, ../vendor/bundler/gems/zurb-foundation-3.0.7/stylesheets/foundation/mixins/_clearfix.scss */
+navigation.site:after {
+  clear: both;
+}
+/* line 30, ../sass/shared/_header.scss */
+navigation.site ul {
+  display: block;
+  list-style: none;
+}
+/* line 34, ../sass/shared/_header.scss */
+navigation.site li {
+  display: block;
+  list-style: none;
+}
+/* line 38, ../sass/shared/_header.scss */
+navigation.site a {
+  display: block;
+  text-align: center;
+  color: white;
+  font-size: 23px;
+  padding: 8px 0;
+}
+
+/* line 4, ../sass/sections/_home.scss */
+.home .blurb {
+  margin: 15px 0 35px;
+  text-align: justify;
+  font-size: 23px;
+  line-height: 1.2;
+}
+@media only screen and (max-width: 500px) {
+  /* line 4, ../sass/sections/_home.scss */
+  .home .blurb {
+    font-size: 17px;
+  }
+}
+/* line 13, ../sass/sections/_home.scss */
+.home .blurb em {
+  color: #0e8dd0;
+}
+/* line 17, ../sass/sections/_home.scss */
+.home .news h1 {
+  font-size: 37px;
+}
+/* line 21, ../sass/sections/_home.scss */
+.home .featuring h1 {
+  font-size: 37px;
+}
+/* line 22, ../sass/sections/_home.scss */
+.home .featuring ul {
+  list-style: none;
 }
