Adds "Featuring" list with thumbnails, tightens everything up for mobile.

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,5 +1,6 @@
 // Globally-useful helpers
 @import "globals/variables";
+@import "globals/copy";
 
 // Library Functions
 @import "compass/utilities";
