--- a/sass/sections/_home.scss
+++ b/sass/sections/_home.scss
@@ -2,23 +2,46 @@
 .home {
 
   .blurb {
+    @extend .copy-styles;
+
     margin: 15px 0 35px;
     text-align: justify;
 
-    font-size: ms(2); line-height: 1.2;
+    font-size: 20px; line-height: 1.3;
     @media only screen and (max-width: 500px) {
       font-size: ms(1);
     }
-
-    em { color: $feature-color; }
   }
 
   .news {
-    h1 { font-size: ms(4); }
+    h1 {
+      font-size: ms(4); margin-left: -2px;
+      @media only screen and (max-width: 500px) { font-size: ms(3); }
+    }
   }
 
   .featuring {
-    h1 { font-size: ms(4); }
+    display: block;
+
+    h1 {
+      font-size: ms(4); margin-left: -2px;
+      @media only screen and (max-width: 500px) { font-size: ms(3); }
+    }
     ul { list-style: none; }
+
+    a {
+      display: block;
+      @media only screen and (max-width: 500px) { padding-bottom: 20px; }
+
+      color: $feature-color;
+      &:hover, &:active { color: $feature-color; }
+
+      h2 {
+        font-size: ms(2); margin: 0 0 5px -2px; line-height: 1;
+        &:hover { text-decoration: underline; }
+        @media only screen and (max-width: 500px) { margin-top: 5px; }
+      }
+      p { color: $text-color; line-height: 1.3; }
+    }
   }
 }
