--- a/sass/sections/_home.scss
+++ b/sass/sections/_home.scss
@@ -28,10 +28,9 @@
       @media only screen and (max-width: 500px) { font-size: ms(3); }
     }
     ul { list-style: none; }
-
+    li { padding-bottom: 12px; }
     a {
       display: block;
-      @media only screen and (max-width: 500px) { padding-bottom: 20px; }
 
       color: $feature-color;
       &:hover, &:active { color: $feature-color; }
@@ -41,7 +40,7 @@
         &:hover { text-decoration: underline; }
         @media only screen and (max-width: 500px) { margin-top: 5px; }
       }
-      p { color: $text-color; line-height: 1.3; }
+      p { color: $text-color; line-height: 1.3; margin-bottom: 0; }
     }
   }
 }
